[workspace]
members = ["contracts/*", "packages/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Victor"]
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
cosmwasm-std = "2.2.2"
cosmwasm-schema = "2.2.2"
cw-storage-plus = "2.0.0"
cw2 = "2.0.0"
schemars = "0.8.21"
serde = { version = "1.0.214", default-features = false, features = ["derive"] }
thiserror = "1.0.69"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true
