[package]
name = "lsm-staking"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = { workspace = true, features = ["staking", "cosmwasm_2_2", "stargate"] }
cosmwasm-schema = { workspace = true }
cw-storage-plus = { workspace = true }
cw2 = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
lsm-types = { path = "../../packages/lsm-types" }
proposal-locker-types = { path = "../../packages/proposal-locker-types" }
prost = "0.13"
# Force compatible version of ed25519-zebra for cosmwasm-crypto 2.2.2
ed25519-zebra = "=4.0.3"

[dev-dependencies]
cosmwasm-std = { workspace = true, features = ["stargate"] }
