[package]
name = "proposal-option-locker"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = { workspace = true, features = ["staking", "cosmwasm_2_2", "stargate"] }
cosmwasm-schema = { workspace = true }
cw-storage-plus = { workspace = true }
cw2 = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
proposal-locker-types = { path = "../../packages/proposal-locker-types" }
lsm-types = { path = "../../packages/lsm-types" }
prost = "0.13"

[dev-dependencies]
cosmwasm-std = { workspace = true, features = ["stargate"] }
